web-app/css/profiles.css
.scientific-name {
    font-style: italic;
}

.normal-text {
    font-style: normal;
}

.collection-thumbnail {
    width: 160px;
    height: 100px
}

accordion > div.panel-group > div.panel > div.panel-heading, .panel-title > a > a {
    /*color: #e9004a;*/
}

accordion > div.panel-group > div.panel {
    border: 1px solid white;
}

accordion > div.panel-group, #search {
    margin-bottom: 0px !important;
}

accordion > div.panel-group > div.panel > div.panel-heading {
    border-bottom: 1px solid #e7e7e7;
    padding-top: 15px;
    padding-bottom: 15px;
}

accordion > div.panel-group > div.panel > div.panel-collapse > div.panel-body {
    background-color: #f8f8f8;
    border: none;
    color: #e9004a;
    padding: 1px;
}

.accordion-item {
    border-bottom: 1px solid #e7e7e7;
    padding-left: 15px;
    padding-top: 15px;
    padding-bottom: 15px;
}

.accordion-item > a {
    font-weight: 200;
    font-size: 14px;
    text-decoration: none;
    line-height: 1.6em;
}

.panel-title > a > .caret {
    float: right;
    margin: 9px 5px 0;
}

.single-line-editor > .ta-editor {
    min-height: 50px !important;
    height: 50px !important;
}

#citationHtml > .ta-editor{
    height: 100px !important;
    min-height: 100px !important;
}

.inline-block, .single-line-editor > .inline-block {
    display: inline-block !important;
}

.inline {
    display: inline;
}

.square {
    width: 1.5em;
    max-width: 1.5em;
    min-width: 1.5em;
    height: 1.5em;
    min-height: 1.5em;
    max-height: 1.5em;
    display: inline-block;
}

.column-item {
    display: inline-block;
    width: 33%;
    padding: 5px;
}

.newItem {
    font-style: italic;
}

input[type=file] {
    display: inline-block;
}

input[type=checkbox], input[type=radio] {
    margin: 2px 0 0;
}

.small, .small * {
    font-size: 12px !important;
}

.display-text {
    white-space: pre-wrap;
}

.annotation {
    font-weight: 200;
    font-size: 12px;
}

.citation {
    color: #999999;
    padding-bottom: 3px;
}

.citation:before {
    content: '\2014 \00A0';
}

.citation-example p {
    display: inline;
}

.citation-example > p {
    display: block;
}

.attribute-header-input {
    font-weight: bold;
}

/* Species status icons */
.status {
    height: 40px;
    width: 40px;
    margin: 0 6px 12px 0;
    display: inline-block;
    font-weight: bold;
    line-height: 40px;
    color: #333a3f;
    text-align: center;
    -moz-border-radius: 2em;
    -webkit-border-radius: 2em;
    border-radius: 2em; /* Opera 10.5, IE 9 */
    font-variant: small-caps;
    border: 1px solid #3d464c;
    background-color: #fff;
}

.status.small {
    height: 30px;
    width: 30px;
    line-height: 30px;
    font-size: 8px;
}

.status.green {
    background-color: #43c205;
    border-color: #43c205;
    color: #fff;
}

.status.yellow {
    background-color: #ffbb00;
    border-color: #ffbb00;
}

.status.red {
    background-color: #e30202;
    border-color: #e30202;
    color: #fff;
}

hr.comment-divider {
    border-top: 1px solid #fa6158;
}

.float-bottom-left {
    bottom: 10px;
    left: 10px;
    position: fixed;
}

.admin-message {
    text-align: center;
}

.admin-message-text {
    font-size: 24px;
}

.customizable-logo-img {
    max-width: 275px;
    margin: 0 auto;
}

.comparison-row {
    margin-top: 10px;
    padding-top: 10px;
}

.comparison-divider {
    border-top: 1px solid #eeeeee;
    padding-top: 5px;
}

.comparison-image {
    display: inline-block;
    margin: 2px 4px 2px 0;
    width: 100%;
}

.comparison-image img {
    height: 100px;
    /*min-width: 50px;*/
}

.minor-heading {
    font-weight: bold;
    padding-top: 2px;
    padding-bottom: 3px;
    display: inline-block;
}

.output-label {
    min-width: 150px;
    max-width: 150px;
    width: 150px;
    text-align: right;
    font-weight: bold;
    display: inline-block;
    padding-right: 15px;
}

.nomenclature .concept {
    font-weight: bold;
    display: inline-block;
}

.nomenclature a, .nomenclature a:focus, .nomenclature a:hover {
    margin-left: -10px;
    text-decoration: none;
}

.nomenclature .concept-detail {
    padding-left: 30px;
}

.nomenclature .nsl-link {
    display: inline-block;
    font-size: smaller;
    padding-left: 10px;
}

.nomenclature .apc {
    display: inline-block;
    color: green;
    padding-left: 10px;
    padding-right: 20px;
}

/* ---- */

/* Gallery styling */
.imgCon, .imgConLarge, .imgConSmall. .imgConCarousel {
    display: inline-block;
    margin: 2px 4px 2px 0;
    width: 100%;
}

.imgConLarge {
     max-height: 500px;
     overflow-y: scroll;
 }

.imgConCarousel {
     max-height: 350px;
     min-height: 350px;
     overflow-y: scroll;
 }

.imgCon img {
    height: 200px !important;
    min-width: 180px !important;
}

.imgConSmall img {
    max-width: 150px !important;
    min-width: 150px !important;
}

.imgConLarge img {
    max-width: 100%;
    min-width: 300px !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.imgConCarousel img {
    max-height: 350px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.imgCon.thumbnail {
}

.primary-image {
    display: inline-block;
    width: 100%;
}

.primary-image div img {
    height: 300px;
    min-width: 250px;
}

.primary-image p {
    height: 290px;
    min-width: 250px;
}

.upload-image-preview, .upload-image-preview img {
    height: 100px;
}

.thumbnail {
    margin-bottom: 0;
}

.caption {
    font-size: 12px;
    text-transform: none;
    margin: 0 !important;
    padding: 0 !important;
}

/* ---- */

/* audit history diff */

ins, .diff_insert {
    background-color: lightgreen !important;
    font-style: italic;
}

del, .diff_delete {
    background-color: orange !important;
    text-decoration: line-through;
}

/* ---- */

/* NSL CSS overrides */
editor, .toggleNext, a > apc, apnilink, a > i.fa-search {
    display: none;
}

.well.instances {
    background: white;
}
/* ... */

